--- a/sp/dtp.html
+++ b/sp/dtp.html
@@ -74,6 +74,21 @@
         </div>
       </section>
     </a>
+    <!-- コンテンツ05 -->
+    <a href="sp_d05.html" alt="WEBdesignのコンテンツです">
+      <section class="content01">
+        <div class="photo">
+          <img src="img/d05_kv.jpg" width="70" height="70" style="border-radius:50%"> 
+        </div>
+        <div class="text">
+          <div class="title">
+            <h2>TALLMAN</h2>
+            <img src="img/mark.png" class="button" width="10" height="auto">
+          </div>
+          <p>子供の成長をサポートするインソールブランド「TALLMAN」のロゴデザインと、インソールデザインを担当。成長を意味するアイコンと、歩く人を融合したロゴを考案。インソールは成長過程でも長く使ってもらえるようにシンプルな流線のデザインで作成。</p>
+        </div>
+      </section>
+    </a>
   </section>
 </body>
 </html>
