--- a/pc/d05.html
+++ b/pc/d05.html
@@ -27,10 +27,10 @@
     <section class="content">
       <section class="content_wrapper">
         <div class="content01 fadein">
-          <img src="img/d05_content01.jpg" alt="プロジェクト画像" width="100%">
+          <img src="../pcimg/d05_content01.jpg" alt="プロジェクト画像" width="100%">
         </div>
         <div class="content02 fadein">
-          <img src="img/d05_content02.jpg" alt="プロジェクト画像" width="100%">
+          <img src="../pcimg/d05_content02.jpg" alt="プロジェクト画像" width="100%">
         </div>
       </section>
     </section>
