--- a/sp/sp_d05.html
+++ b/sp/sp_d05.html
@@ -10,10 +10,10 @@
   <a href="dtp.html" alt="DTPの一覧ページに戻ります">
   <section class="top">
     <section class="back">
-      <img src="img/back_button.png" width="80" alt="戻るボタン">
+      <img src="../spimg/back_button.png" width="80" alt="戻るボタン">
     </section>
     <section class="icon">
-      <img src="img/d05_kv.jpg" width="50" height="50" style="border-radius: 50%;">
+      <img src="../spimg/d05_kv.jpg" width="50" height="50" style="border-radius: 50%;">
       <h1>TALLMAN</h1>
     </section>
   </section>
