--- a/pc/r07.html
+++ b/pc/r07.html
@@ -29,7 +29,7 @@
         <img src="../pcimg/r07_content01.jpg" alt="プロジェクト画像" width="100%">
       </div>
       <div class="content02 fadein">
-        <img src="../pcimg/r07_content02.JPG" alt="プロジェクト画像" width="100%">
+        <img src="../pcimg/r07_content02.jpg" alt="プロジェクト画像" width="100%">
       </div>
       <div class="content03 fadein">
         <img src="../pcimg/r07_content03.jpg" alt="プロジェクト画像" width="100%">
