--- a/sp/dtp.html
+++ b/sp/dtp.html
@@ -89,6 +89,51 @@
         </div>
       </section>
     </a>
+    <!-- コンテンツ06 -->
+    <a href="sp_d06.html" alt="WEBdesignのコンテンツです">
+      <section class="content01">
+        <div class="photo">
+          <img src="../spimg/d06_kv.jpg" width="70" height="70" style="border-radius:50%"> 
+        </div>
+        <div class="text">
+          <div class="title">
+            <h2>tu-hacci CATALOG</h2>
+            <img src="../spimg/mark.png" class="button" width="10" height="auto">
+          </div>
+          <p>下着メーカーのカタログを半年間担当。内装と同じコンセプトで毎度イメージを少しづつ変更して作成し、ブランドイメージを守りながら作成。リアルイベントでカタログがすぐなるほど好評を得て、売上に貢献。</p>
+        </div>
+      </section>
+    </a>
+    <!-- コンテンツ07 -->
+    <a href="sp_d07.html" alt="WEBdesignのコンテンツです">
+      <section class="content01">
+        <div class="photo">
+          <img src="../spimg/d07_kv.jpg" width="70" height="70" style="border-radius:50%"> 
+        </div>
+        <div class="text">
+          <div class="title">
+            <h2>tu-hacci ADS</h2>
+            <img src="../spimg/mark.png" class="button" width="10" height="auto">
+          </div>
+          <p>下着メーカーの同梱物を半年間担当。リニューアルや新作入荷のタイミングで、情報が伝わりやすい構成にすることと、ブランドイメージを踏襲して作成することを重要視して作成を行なった。</p>
+        </div>
+      </section>
+    </a>
+    <!-- コンテンツ08 -->
+    <a href="sp_d08.html" alt="WEBdesignのコンテンツです">
+      <section class="content01">
+        <div class="photo">
+          <img src="../spimg/d08_kv.jpg" width="70" height="70" style="border-radius:50%"> 
+        </div>
+        <div class="text">
+          <div class="title">
+            <h2>Guest house HaDuNo</h2>
+            <img src="../spimg/mark.png" class="button" width="10" height="auto">
+          </div>
+          <p>新設の宿泊施設のパンフレット作成を担当。写真のレタッチ、パンフレットの構成からデザインの作成、入稿までを担当。ロゴに合うデザインの提案を行なった。</p>
+        </div>
+      </section>
+    </a>
   </section>
 </body>
 </html>
