--- a/pc/w15.html
+++ b/pc/w15.html
@@ -21,7 +21,7 @@
       <h2>#direction#design#graphic</h2>
       <p class="fadein">化粧品メーカーのツアーイベントPR広告を作成。</p>
       <div class="url fadein">
-        <div class="url_title"><h2>-WEBdesign</h2></div>
+        <div class="url_title"><h2>-SNS PR</h2></div>
         <div class="url_link"><a href="https://www.pola.co.jp/special/p/bihadaken/tour/tour3/">URL</a></div>
       </div>
       <section class="content">
