--- a/pc/d06.html
+++ b/pc/d06.html
@@ -19,7 +19,8 @@
   <section class="wrapper">
     <h1>tu-hacci CATALOG</h1>
     <h2>#design#graphic</h2>
-    <p class="fadein">下着メーカーのカタログを半年間担当。内装と同じコンセプトで毎度イメージを少しづつ変更して作成し、ブランドイメージを守りながら作成。リアルイベントでカタログがすぐなるほど好評を得て、売上に貢献。
+    <p class="fadein">下着メーカーのカタログを半年間担当。内装と同じコンセプトで毎度イメージを少しづつ変更して作成し、
+      ブランドイメージを守りながら作成。リアルイベントで多くの来場者から好評を得る事ができ、すぐ在庫切れとなった。
     </p>
     <div class="url fadein">
       <div class="url_title"><h2>-DTP</h2></div>
