--- a/sp/sp_w13.html
+++ b/sp/sp_w13.html
@@ -35,7 +35,7 @@
       <h2 class="fadein">#direction#design#graphic</h2>
       <p class="fadein">下着メーカーの広告画像を多数担当。広告売上を平均して、2倍に引き上げることに成功。様々な構成のデザインを作ることで売上に貢献。</p>
       <div class="url fadein">
-        <div class="url_title"><h2>-WEBdesign</h2></div>
+        <div class="url_title"><h2>-SNS PR</h2></div>
         <div class="url_link">-</div>
       <div class="content01 fadein">
         <img src="../spimg/w13_content01.jpg" width="100%">
