--- a/sp/sp_w08.html
+++ b/sp/sp_w08.html
@@ -36,7 +36,9 @@
       <p class="fadein">下着メーカーのハロウィン特集ページのデザインを担当。</p>
       <div class="url fadein">
         <div class="url_title"><h2>-WEBdesign</h2></div>
-        <div class="url_link"><a href="https://www.tu-hacci.co.jp/f/feature/2409_halloween?gclid=CjwKCAiAn9a9BhBtEiwAbKg6fnwUiunh7zk_x-mE5kDvoZeVFuu964MUjdeuDzJ_doJRR7u7hjvoihoCv38QAvD_BwE" target="_blank">URL</a></div>
+        <div class="url_link">
+          <a href="https://www.tu-hacci.co.jp/f/feature/2409_halloween?gclid=CjwKCAiAn9a9BhBtEiwAbKg6fnwUiunh7zk_x-mE5kDvoZeVFuu964MUjdeuDzJ_doJRR7u7hjvoihoCv38QAvD_BwE" target="_blank">URL</a>
+        </div>
       <div class="content01 fadein">
         <img src="../spimg/w08_content01.jpg" width="100%">
       </div>
