--- a/sp/sp_w08.html
+++ b/sp/sp_w08.html
@@ -18,8 +18,8 @@
       <img src="../spimg/back_button.png" width="70" alt="戻るボタン">
     </section>
     <section class="icon">
-      <img src="../spimg/w08_kv.jpg" width="50" height="50" style="border-radius: 50%;">
-      <h1>tu-hacci HALLOWEEN</h1>
+      <img src="../spimg/w06_kv.jpg" width="50" height="50" style="border-radius: 50%;">
+      <h1>tu-hacci BRAIRAZU</h1>
     </section>
   </section>
 </a>
@@ -36,9 +36,8 @@
       <p class="fadein">下着メーカーのハロウィン特集ページのデザインを担当。</p>
       <div class="url fadein">
         <div class="url_title"><h2>-WEBdesign</h2></div>
-        <div class="url_link">
-          <a href="https://www.tu-hacci.co.jp/f/feature/2409_halloween?gclid=CjwKCAiAn9a9BhBtEiwAbKg6fnwUiunh7zk_x-mE5kDvoZeVFuu964MUjdeuDzJ_doJRR7u7hjvoihoCv38QAvD_BwE" target="_blank">URL</a>
-        </div>
+        <div class="url_link"><a href="https://www.tu-hacci.co.jp/f/feature/2409_halloween?gclid=CjwKCAiAn9a9BhBtEiwAbKg6fnwUiunh7zk_x-mE5kDvoZeVFuu964MUjdeuDzJ_doJRR7u7hjvoihoCv38QAvD_BwE" target="_blank">URL</a></div>
+      </div>
       <div class="content01 fadein">
         <img src="../spimg/w08_content01.jpg" width="100%">
       </div>
