--- a/sp/sp_w08.html
+++ b/sp/sp_w08.html
@@ -19,7 +19,7 @@
     </section>
     <section class="icon">
       <img src="../spimg/w06_kv.jpg" width="50" height="50" style="border-radius: 50%;">
-      <h1>tu-hacci BRAIRAZU</h1>
+      <h1>tu-hacci HALLOWEEN</h1>
     </section>
   </section>
 </a>
