--- a/sp/sp_w09.html
+++ b/sp/sp_w09.html
@@ -18,7 +18,7 @@
       <img src="../spimg/back_button.png" width="70" alt="戻るボタン">
     </section>
     <section class="icon">
-      <img src="../spimg/w08_kv.jpg" width="50" height="50" style="border-radius: 50%;">
+      <img src="../spimg/w09_kv.jpg" width="50" height="50" style="border-radius: 50%;">
       <h1>tu-hacci CHRISTMAS</h1>
     </section>
   </section>
@@ -36,7 +36,10 @@
       <p class="fadein">下着メーカーのクリスマス特集ページのデザインを担当。</p>
       <div class="url fadein">
         <div class="url_title"><h2>-WEBdesign</h2></div>
-        <div class="url_link"><a href="https://www.tu-hacci.co.jp/f/feature/2412_christmas" target="_blank">URL</a></div>
+        <div class="url_link">
+          <a href="https://www.tu-hacci.co.jp/f/feature/2412_christmas" target="_blank">URL</a>
+        </div>
+      </div>
       <div class="content01 fadein">
         <img src="../spimg/w09_content01.jpg" width="100%">
       </div>
