--- a/sp/sp_w10.html
+++ b/sp/sp_w10.html
@@ -37,6 +37,7 @@
       <div class="url fadein">
         <div class="url_title"><h2>-WEBdesign</h2></div>
         <div class="url_link"><a href="https://www.tu-hacci.co.jp/f/feature/valentine_collection_2025" target="_blank">URL</a></div>
+      </div>
       <div class="content01 fadein">
         <img src="../spimg/w10_content01.jpg" width="100%">
       </div>
