--- a/sp/sp_w09.html
+++ b/sp/sp_w09.html
@@ -36,9 +36,7 @@
       <p class="fadein">下着メーカーのクリスマス特集ページのデザインを担当。</p>
       <div class="url fadein">
         <div class="url_title"><h2>-WEBdesign</h2></div>
-        <div class="url_link">
-          <a href="https://www.tu-hacci.co.jp/f/feature/2412_christmas" target="_blank">URL</a>
-        </div>
+        <div class="url_link"><a href="https://www.tu-hacci.co.jp/f/feature/2412_christmas" target="_blank">URL</a></div>
       </div>
       <div class="content01 fadein">
         <img src="../spimg/w09_content01.jpg" width="100%">
