--- a/sp/sp_w12.html
+++ b/sp/sp_w12.html
@@ -37,6 +37,7 @@
       <div class="url fadein">
         <div class="url_title"><h2>-WEBdesign</h2></div>
         <div class="url_link">-</div>
+      </div>
       <div class="content01 fadein">
         <img src="../spimg/w12_content01.jpg" width="100%">
       </div>
