--- a/sp/sp_w13.html
+++ b/sp/sp_w13.html
@@ -37,6 +37,7 @@
       <div class="url fadein">
         <div class="url_title"><h2>-SNS PR</h2></div>
         <div class="url_link">-</div>
+      </div>
       <div class="content01 fadein">
         <img src="../spimg/w13_content01.jpg" width="100%">
       </div>
