--- a/sp/sp_w14.html
+++ b/sp/sp_w14.html
@@ -37,6 +37,7 @@
       <div class="url fadein">
         <div class="url_title"><h2>-WEBdesign</h2></div>
         <div class="url_link"><a href="https://staykumanokushimoto.com/" target="_blank">URL</a></div>
+      </div>
       <div class="content01 fadein">
         <img src="../spimg/w14_content01.jpg" width="100%">
       </div>
