--- a/sp/sp_w15.html
+++ b/sp/sp_w15.html
@@ -37,6 +37,7 @@
       <div class="url fadein">
         <div class="url_title"><h2>-WEBdesign</h2></div>
         <div class="url_link"><a href="https://www.pola.co.jp/special/p/bihadaken/tour/tour3/">URL</a></div>
+      </div>
       <div class="content01 fadein">
         <img src="../spimg/w15_content01.jpg" width="100%">
       </div>
