--- a/sp/sp_d05.html
+++ b/sp/sp_d05.html
@@ -5,12 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Y.KOYANAGAWA DTP</title>
   <link rel="stylesheet" href="sp_d05.css">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Noto+Sans+JP&display=swap" rel="stylesheet">
+  
 </head>
 <body>
   <a href="dtp.html" alt="DTPの一覧ページに戻ります">
   <section class="top">
     <section class="back">
-      <img src="../spimg/back_button.png" width="80" alt="戻るボタン">
+      <img src="../spimg/back_button.png" width="70" alt="戻るボタン">
     </section>
     <section class="icon">
       <img src="../spimg/d05_kv.jpg" width="50" height="50" style="border-radius: 50%;">
@@ -28,10 +33,12 @@
   <section class="content">
     <section class="project">
       <h2 class="fadein">#logo#insole#design</h2>
-      <p class="fadein">子供の成長をサポートするインソールブランド「TALLMAN」のロゴデザインと、インソールデザインを担当。成長を意味するアイコンと、歩く人を融合したロゴを考案。インソールは成長過程でも長く使ってもらえるようにシンプルな流線のデザインで作成。</p>
+      <p class="fadein">子供の成長をサポートするインソールブランド「TALLMAN」のロゴデザインと、インソールデザインを担当。成長を意味するアイコンと、歩く人を融合したロゴを考案。
+        インソールは成長過程でも長く使ってもらえるようにシンプルな流線のデザインで作成。</p>
       <div class="url fadein">
         <div class="url_title"><h2>-DTP</h2></div>
-        <div class="url_link"><a href="https://www.amazon.co.jp/TALLMAN-%E6%88%90%E9%95%B7%E3%82%B5%E3%83%9D%E3%83%BC%E3%83%88-%E9%AA%A8%E6%A0%BC%E7%AD%8B%E9%87%8F%E5%A2%97%E5%BC%B7%E3%82%B5%E3%83%9D%E3%83%BC%E3%83%88-%E3%83%88%E3%83%83%E3%83%97%E3%82%A2%E3%82%B9%E3%83%AA%E3%83%BC%E3%83%88%E4%BD%BF%E7%94%A8-23-0-24-5/dp/B0CCKYKN6Y" target="_blank">URL</a></div>
+        <div class="url_link">
+          <a href="https://www.amazon.co.jp/TALLMAN-%E6%88%90%E9%95%B7%E3%82%B5%E3%83%9D%E3%83%BC%E3%83%88-%E9%AA%A8%E6%A0%BC%E7%AD%8B%E9%87%8F%E5%A2%97%E5%BC%B7%E3%82%B5%E3%83%9D%E3%83%BC%E3%83%88-%E3%83%88%E3%83%83%E3%83%97%E3%82%A2%E3%82%B9%E3%83%AA%E3%83%BC%E3%83%88%E4%BD%BF%E7%94%A8-23-0-24-5/dp/B0CCKYKN6Y" target="_blank">URL</a></div>
       </div>
       <div class="content01 fadein">
         <img src="../spimg/d05_content01.jpg" width="100%">
@@ -43,8 +50,7 @@
   </section>
 </section>
 
-<script src="js/jquery-3.2.1.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script>
 $(function(){
   $(window).scroll(function (){
