--- a/sp/sp_d06.html
+++ b/sp/sp_d06.html
@@ -5,12 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Y.KOYANAGAWA DTP</title>
   <link rel="stylesheet" href="sp_d06.css">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Noto+Sans+JP&display=swap" rel="stylesheet">
+  
 </head>
 <body>
   <a href="dtp.html" alt="DTPの一覧ページに戻ります">
   <section class="top">
     <section class="back">
-      <img src="../spimg/back_button.png" width="80" alt="戻るボタン">
+      <img src="../spimg/back_button.png" width="70" alt="戻るボタン">
     </section>
     <section class="icon">
       <img src="../spimg/d06_kv.jpg" width="50" height="50" style="border-radius: 50%;">
@@ -28,7 +33,8 @@
   <section class="content">
     <section class="project">
       <h2 class="fadein">#design#graphic</h2>
-      <p class="fadein">下着メーカーのカタログを半年間担当。内装と同じコンセプトで毎度イメージを少しづつ変更して作成し、ブランドイメージを守りながら作成。リアルイベントでカタログがすぐなるほど好評を得て、売上に貢献。</p>
+      <p class="fadein">子供の成長をサポートするインソールブランド「TALLMAN」のロゴデザインと、インソールデザインを担当。成長を意味するアイコンと、歩く人を融合したロゴを考案。
+        インソールは成長過程でも長く使ってもらえるようにシンプルな流線のデザインで作成。</p>
       <div class="url fadein">
         <div class="url_title"><h2>-DTP</h2></div>
         <div class="url_link">-</div>
@@ -39,60 +45,11 @@
       <div class="content02 fadein">
         <img src="../spimg/d06_content02.jpg" width="100%">
       </div>
-      <div class="content02 fadein">
-        <img src="../spimg/d06_content03.jpg" width="100%">
-      </div>
-      <div class="content02 fadein">
-        <img src="../spimg/d06_content04.jpg" width="100%">
-      </div>
-      <div class="content02 fadein">
-        <img src="../spimg/d06_content05.jpg" width="100%">
-      </div>
-      <div class="content02 fadein">
-        <img src="../spimg/d06_content06.jpg" width="100%">
-      </div>
-      <div class="content02 fadein">
-        <img src="../spimg/d06_content07.jpg" width="100%">
-      </div>
-      <div class="content02 fadein">
-        <img src="../spimg/d06_content08.jpg" width="100%">
-      </div>
-      <div class="content02 fadein">
-        <img src="../spimg/d06_content09.jpg" width="100%">
-      </div>
-      <div class="content02 fadein">
-        <img src="../spimg/d06_content10.jpg" width="100%">
-      </div>
-      <div class="content02 fadein">
-        <img src="../spimg/d06_content11.jpg" width="100%">
-      </div>
-      <div class="content02 fadein">
-        <img src="../spimg/d06_content12.jpg" width="100%">
-      </div>
-      <div class="content02 fadein">
-        <img src="../spimg/d06_content13.jpg" width="100%">
-      </div>
-      <div class="content02 fadein">
-        <img src="../spimg/d06_content14.jpg" width="100%">
-      </div>
-      <div class="content02 fadein">
-        <img src="../spimg/d06_content15.jpg" width="100%">
-      </div>
-      <div class="content02 fadein">
-        <img src="../spimg/d06_content16.jpg" width="100%">
-      </div>
-      <div class="content02 fadein">
-        <img src="../spimg/d06_content17.jpg" width="100%">
-      </div>
-      <div class="content02 fadein">
-        <img src="../spimg/d06_content18.jpg" width="100%">
-      </div>
     </section>
   </section>
 </section>
 
-<script src="js/jquery-3.2.1.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script>
 $(function(){
   $(window).scroll(function (){
