--- a/sp/sp_d06.html
+++ b/sp/sp_d06.html
@@ -33,8 +33,8 @@
   <section class="content">
     <section class="project">
       <h2 class="fadein">#design#graphic</h2>
-      <p class="fadein">子供の成長をサポートするインソールブランド「TALLMAN」のロゴデザインと、インソールデザインを担当。成長を意味するアイコンと、歩く人を融合したロゴを考案。
-        インソールは成長過程でも長く使ってもらえるようにシンプルな流線のデザインで作成。</p>
+      <p class="fadein">下着メーカーのカタログを半年間担当。内装と同じコンセプトで毎度イメージを少しづつ変更して作成し、
+      ブランドイメージを守りながら作成。リアルイベントで多くの来場者から好評を得る事ができ、すぐ在庫切れとなった。</p>
       <div class="url fadein">
         <div class="url_title"><h2>-DTP</h2></div>
         <div class="url_link">-</div>
