--- a/sp/introduction.html
+++ b/sp/introduction.html
@@ -66,10 +66,19 @@
       </section>
       <section class="line">
         <div class="line01">
-          <h4>2022/04 - </h4>
+          <h4>2022/04 - 2024/08</h4>
+        </div>
+        <div class="line02">
+          <p>フリーランスとして活動</p>
+        </div>
+      </section>
+      <section class="line">
+        <div class="line01">
+          <h4>2024/09 - 2025/02</h4>
         </div>
         <div class="line02">
           <p>フリーランスとして活動中</p>
+          <h5>デザイナーとしてLP/web制作/内装ディレクションを行う</h5>
         </div>
       </section>
     </section>
