--- a/pc/in.html
+++ b/pc/in.html
@@ -25,7 +25,8 @@
         <li>2014/04 - 2017/03  法政大学デザイン工学部システムデザイン学科</li>
         <li>2017/04 - 2021/07  株式会社博展空間デザイナーとして展示会/イベント空間/常設空間などの設計を行う</li>
         <li>2021/09 - 2021/10  株式会社レオソフィアwebデザイナーとしてLP/web制作を行う</li>
-        <li>2022/04 -          フリーランスとして活動中</li>
+        <li>2022/04 - 2024/08  フリーランスとして活動</li>
+        <li>2024/09 - 2025/02  株式会社Water AirデザイナーとしてLP/web制作/内装ディレクションを行う</li>
       </ul>
     </div>
     <div class="content02 fadein"">
