--- a/sp/introduction.html
+++ b/sp/introduction.html
@@ -77,7 +77,7 @@
           <h4>2024/09 - 2025/02</h4>
         </div>
         <div class="line02">
-          <p>フリーランスとして活動中</p>
+          <p>株式会社Water Air</p>
           <h5>デザイナーとしてLP/web制作/内装ディレクションを行う</h5>
         </div>
       </section>
