--- a/sp/sp_r07.html
+++ b/sp/sp_r07.html
@@ -32,7 +32,7 @@
 <section class="container">
   <section class="content">
     <section class="project">
-      <h2 class="fadein">#design#planning</h2>
+      <h2 class="fadein">#direction#design#planning</h2>
       <p class="fadein">下着メーカーのPOPUP SHOPをメインで担当。店内POP、配布LOOKBOOK、内装のメインビジュアル、内装ディレクションを担当。ブランドイメージを毀損しないようにデザインを作成。</p>
       <div class="url fadein">
         <div class="url_title"><h2>-REALevent</h2></div>
