--- a/pc/d07.html
+++ b/pc/d07.html
@@ -18,7 +18,7 @@
   <section class="container">
   <section class="wrapper">
     <h1>tu-hacci ADS</h1>
-    <h2>#design#graphic</h2>
+    <h2>#direction#design#graphic</h2>
     <p class="fadein">下着メーカーの同梱物を半年間担当。リニューアルや新作入荷のタイミングで、情報が伝わりやすい構成にすることと、ブランドイメージを踏襲して作成することを重要視して作成を行なった。
     </p>
     <div class="url fadein">
