--- a/sp/sp_d07.html
+++ b/sp/sp_d07.html
@@ -36,8 +36,7 @@
       <p class="fadein">下着メーカーの同梱物を半年間担当。リニューアルや新作入荷のタイミングで、情報が伝わりやすい構成にすることと、ブランドイメージを踏襲して作成することを重要視して作成を行なった。</p>
       <div class="url fadein">
         <div class="url_title"><h2>-DTP</h2></div>
-        <div class="url_link">
-          <a href="https://www.amazon.co.jp/TALLMAN-%E6%88%90%E9%95%B7%E3%82%B5%E3%83%9D%E3%83%BC%E3%83%88-%E9%AA%A8%E6%A0%BC%E7%AD%8B%E9%87%8F%E5%A2%97%E5%BC%B7%E3%82%B5%E3%83%9D%E3%83%BC%E3%83%88-%E3%83%88%E3%83%83%E3%83%97%E3%82%A2%E3%82%B9%E3%83%AA%E3%83%BC%E3%83%88%E4%BD%BF%E7%94%A8-23-0-24-5/dp/B0CCKYKN6Y" target="_blank">URL</a></div>
+        <div class="url_link">-</div>
       </div>
       <div class="content01 fadein">
         <img src="../spimg/d07_content01.jpg" width="100%">
